# codex-repo

./: .gitignore  README.md  index.html  script.js  styles.css
cad-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cad-agent/agents/: __init__.py  modeler.py  orchestrator.py  planner.py  validator.py
cad-agent/docs/: agent_instructions.md
cad-agent/inputs/: request_example.yaml
cad-agent/inputs/sketch_notes/: README.md
cad-agent/models/: __init__.py  generated_part.py
cad-agent/prompts/: modeler.md  orchestrator.md  planner.md  validator.md
cad-agent/scripts/: batch_run.py  generate.py  validate.py
cad-agent/specs/: default_print_rules.yaml  part_request.schema.json  printers.yaml
cad-agent/tests/: test_generation_pipeline.py  test_printer_rules.py  test_spec_loading.py
home-storage-agent/: README.md  pyproject.toml  requirements.txt
home-storage-agent/config/: classification_rules.yaml  destinations.yaml  llm_budget.yaml  sensitive_patterns.yaml  sources.yaml
home-storage-agent/data/: duplicates.csv  inventory.csv  migration_plan.csv
home-storage-agent/home_storage_agent/: __init__.py  __main__.py  cli.py  config.py  core.py  logging_utils.py  models.py
home-storage-agent/reports/: backup_verification.md  folder_summaries.md  manual_review.md  migration_report.md
home-storage-agent/scripts/: 01_scan_inventory.py  02_detect_duplicates.py  03_classify_basic.py  04_classify_with_llm.py  05_generate_migration_plan.py  06_execute_copy.py  07_verify_copy.py  08_generate_report.py
rss-feed/: .env.example  README.md  (+14 more)
