[project]
name = "home-storage-agent"
version = "0.1.0"
description = "Local-first CLI for safely auditing, classifying, planning, copying, and verifying home storage migrations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.10.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]

[project.scripts]
home-storage-agent = "home_storage_agent.cli:main"

[tool.setuptools.packages.find]
include = ["home_storage_agent*"]
